test: ReviewService 통합 테스트 Record 문법 적용 및 테스트 개선
- ReviewFeedResult의 메소드명을 Record 문법에 맞게 수정
- getReviews() → reviews(), isNearbyReviewsFound() → nearbyReviewsFound()
- 리뷰 상세 조회 테스트에 스크랩 관련 필드 검증 추가
- 거리별 검색 테스트에서 주석 처리된 테스트 케이스 활성화